page sobre crea

--- a/o-crea-lab.html
+++ b/o-crea-lab.html
@@ -38,7 +38,8 @@
             --theme-primary-bright: #2361D8;
             --theme-primary-bright-bg: #E9EFFC;
             --theme-primary-alt: #00509b;
-            --theme-primary-alt-bg: #E6EEF5;
+            --theme-primary-alt-bg: #E5F4FF;
+         
 
             /* Paleta Secundária (Vermelhos/Laranjas) */
             --theme-secondary-orange: #E14D27;
@@ -86,8 +87,8 @@
             color: var(--theme-secondary-orange);
         }
 
-        .bg-theme-accent-gold-light {
-            background-color: var(--theme-accent-gold-bg);
+        .bg-theme-primary-alt-bg {
+            background-color: var(--theme-primary-alt-bg);
         }
 
         .text-theme-accent-gold {
@@ -164,7 +165,7 @@
         <header class="w-full max-w-7xl mx-auto p-6 md:px-8 flex justify-between items-center">
             <!-- Logo Esquerdo -->
             <div class="text-2xl font-bold tracking-wider text-crea-blue">
-                <a href="index.html"><img src="img/componentes/logo-superior-crea-lab-mg-azul-padrao.png" width="200rem"></a>
+                <a href="index.html"><img src="img/componentes/logo-superior-crea-lab-mg.png" width="100rem"></a>
             </div>
 
             <!-- Menu de Navegação (Desktop) -->
@@ -228,7 +229,7 @@
     </section>
 
     <!-- Seção: Conheça nossos espaços -->
-    <section id="espacos" class="w-full bg-theme-accent-gold-light py-16 sm:py-24 mt-20">
+    <section id="espacos" class="w-full bg-theme-primary-alt-bg py-16 sm:py-24 mt-20">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Título da Seção -->
             <div class="text-center mb-12">
@@ -316,8 +317,8 @@
                 <div class="w-full md:w-1/2 lg:w-1/3">
                     <!-- Placeholder do Logo -->
                     <div class="text-4xl font-bold text-crea-blue"><a href="index.html"><img
-                            src="img/componentes/logo-superior-crea-lab-mg-azul-padrao.png" width="200rem"></a></div>
-                    <hr class="my-4 border-t-2 border-indigo-200 w-32">
+                            src="img/componentes/logo-superior-crea-lab-mg.png" width="150rem"></a></div>
+                    <hr class="my-4 border-t-2 border-indigo-200 w-48">
                     <!-- Ícones de Redes Sociais -->
                     <div class="flex space-x-4 text-crea-blue">
                         <a href="https://www.facebook.com/people/Crea-MG/100063772080022/#" class="hover:text-crea-blue-light transition-colors"  target="_blank"><svg class="w-6 h-6"
