--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
         <div class="absolute top-0 left-0 w-full h-full bg-gradient-to-br from-zinc-900 via-transparent to-zinc-900 z-0"></div>
 
         <header class="w-full p-6 md:px-12 md:py-8 flex justify-between items-center absolute top-0 z-20">
-            <div class="text-2xl font-bold tracking-wider"><img src="img/componentes/logo-principal-crea-lab-mg.png" width="100rem"></div>
+            <div class="text-2xl font-bold tracking-wider text-crea-blue">
+                <a href="index.html"><img src="img/componentes/logo-principal-crea-lab-mg.png" width="100rem"></a>
+            </div>
             <nav class="hidden md:flex">
                 <ul class="flex items-center space-x-8 text-sm font-medium">
                     <li><a href="o-crea-lab.html" class="hover:text-purple-300 transition-colors duration-300">O CreaLab</a></li>
