--- a/coworkings.html
+++ b/coworkings.html
@@ -455,17 +455,12 @@
         <div class="flex flex-col md:flex-row justify-between items-start">
           <!-- Lado Esquerdo: Logo e Social -->
           <div class="w-full md:w-1/2 lg:w-1/3">
-            <!-- Placeholder do Logo -->
-            <div class="text-4xl font-bold text-crea-blue">
-              <a href="index.html"
-                ><img
-                  src="img/componentes/logo-superior-crea-lab-mg-azul-padrao.png"
-                  width="200rem"
-              /></a>
-            </div>
-            <hr class="my-4 border-t-2 border-indigo-200 w-32" />
-            <!-- Ícones de Redes Sociais -->
-            <div class="flex space-x-4 text-crea-blue">
+           <!-- Placeholder do Logo -->
+                    <div class="text-4xl font-bold text-crea-blue"><a href="index.html"><img
+                            src="img/componentes/logo-superior-crea-lab-mg.png" width="150rem"></a></div>
+                    <hr class="my-4 border-t-2 border-indigo-200 w-48">
+                    <!-- Ícones de Redes Sociais -->
+                    <div class="flex space-x-4 text-crea-blue">
               <a
                 href="https://www.facebook.com/people/Crea-MG/100063772080022/#"
                 class="hover:text-crea-blue-light transition-colors"
