page banco de talentos

--- a/banco-de-talentos.html
+++ b/banco-de-talentos.html
@@ -38,7 +38,7 @@
             --theme-primary-bright: #2361D8;
             --theme-primary-bright-bg: #E9EFFC;
             --theme-primary-alt: #00509b;
-            --theme-primary-alt-bg: #E6EEF5;
+            --theme-primary-alt-bg: #EFF8FF;
 
             /* Paleta Secundária (Vermelhos/Laranjas) */
             --theme-secondary-orange: #E14D27;
@@ -87,7 +87,7 @@
         }
 
         .text-theme-secondary-orange {
-            color: var(--theme-secondary-orange);
+            color: var(--theme-primary-bright);
         }
 
         .bg-theme-accent-gold-light {
@@ -125,7 +125,7 @@
 
         /* Classes de Utilitário para o Tema Bege/Laranja (Legado) */
         .bg-theme-beige {
-            background-color: var(--theme-beige-bg);
+            background-color: var(--theme-primary-alt-bg);
         }
 
         .text-theme-orange {
@@ -138,15 +138,15 @@
 
 
         .border-theme-orange {
-            border-color: var(--theme-orange-border);
+            border-color: var(--theme-primary-alt);
         }
 
         .hover\:bg-theme-orange:hover {
-            background-color: var(--theme-orange-text);
+            background-color: var(--theme-primary-bright);
         }
 
         .hover\:border-theme-orange-dark:hover {
-            border-color: var(--theme-orange-text);
+            border-color: var(--theme-primary-alt);
         }
 
         /* Cor personalizada do projeto (Azul - Legado) */
@@ -173,8 +173,11 @@
         <header class="w-full max-w-7xl mx-auto p-6 md:px-8 flex justify-between items-center">
             <!-- Logo Esquerdo -->
             <div class="text-2xl font-bold tracking-wider text-crea-blue">
-                <a href="index.html"><img src="img/componentes/logo-superior-crea-lab-mg-azul-padrao.png"
-                        width="200rem"></a>
+                 <a href="index.html"
+            ><img
+              src="img/componentes/logo-superior-crea-lab-mg.png"
+              width="100rem"
+          /></a>
             </div>
 
             <!-- Menu de Navegação (Desktop) -->
@@ -244,7 +247,7 @@
                     </h2>
                     <p class="text-theme-primary-main leading-relaxed mb-2">
                         O CREA agora conta com um programa exclusivo de <strong
-                            class="text-theme-secondary-orange">divulgação de vagas e banco de talentos</strong> voltado
+                            class="text-crea-blue-bright">divulgação de vagas e banco de talentos</strong> voltado
                         para profissionais e estudantes das áreas da engenharia, agronomia e geociências.
                     </p>
                     <p class="text-theme-primary-main leading-relaxed mb-2">
@@ -256,7 +259,7 @@
                     </p>
                     <p class="mt-5">
                         <a href="https://bancodetalentos.org/" target="_blank"
-                            class="mt-auto text-center w-full border-2 border-theme-orange text-theme-orange font-bold py-2 px-4 rounded-full hover:bg-theme-orange hover:text-white transition-colors duration-300">
+                            class="mt-auto text-center w-full border-2 text-crea-blue-bright text-crea-blue-bright font-bold py-2 px-4 rounded-full hover:bg-theme-orange hover:text-white transition-colors duration-300">
                             Acessar oportunidades!
                         </a>
                         </p>
@@ -369,7 +372,7 @@
                 <div class="w-full md:w-1/2 lg:w-1/3">
                     <!-- Placeholder do Logo -->
                     <div class="text-4xl font-bold text-crea-blue"><a href="index.html"><img
-                            src="img/componentes/logo-superior-crea-lab-mg-azul-padrao.png" width="200rem"></a></div>
+                                src="img/componentes/logo-superior-crea-lab-mg.png" width="150rem"></a></div>
                     <hr class="my-4 border-t-2 border-indigo-200 w-32">
                     <!-- Ícones de Redes Sociais -->
                     <div class="flex space-x-4 text-crea-blue">
