--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                     <li><a href="coworkings.html" class="hover:text-purple-300 transition-colors duration-300">Coworkings</a></li>
                     <li><a href="capacitacao.html" class="hover:text-purple-300 transition-colors duration-300">Capacitação</a></li>
                     <li><a href="banco-de-talentos.html" class="hover:text-purple-300 transition-colors duration-300">Banco de Talentos</a></li>
+                    <li><a href="clube-de-vantagens.html" class="hover:text-purple-300 transition-colors duration-300">Clube de vantagens</a></li>
                 </ul>
             </nav>
             <button id="mobile-menu-button" class="md:hidden z-30">
