projetos da inovação

--- a/clube-de-vantagens.html
+++ b/clube-de-vantagens.html
@@ -150,7 +150,7 @@
             </div>
 
             <!-- Grid de Cards de Projetos -->
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-6">
 
                 <!-- Card Projeto 1 -->
                 <a href="coworkings.html"
@@ -177,6 +177,15 @@
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
                     <h3 class="relative text-white text-xl font-bold">Banco de Talentos</h3>
+                </a>
+
+                <!-- Card Projeto 4 -->
+                <a href="clube-de-vantagens.html"
+                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+                    <img src="img/gerais/clube-de-vantagens.png" alt="Projeto 3"
+                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+                    <h3 class="relative text-white text-xl font-bold">Clube de Vantages</h3>
                 </a>
 
 
