--- a/coworkings.html
+++ b/coworkings.html
@@ -306,49 +306,57 @@
 
   <!-- Seção: Outros Projetos da Inovação -->
   <section id="outros-projetos" class="w-full bg-white pb-16 sm:pb-24">
-    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-      <!-- Título da Seção -->
-      <div class="text-center mb-12">
-        <h3 class="text-3xl font-bold text-crea-blue text-center mb-8">
-          Conheça os outros projetos da inovação
-        </h3>
-      </div>
+        <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Título da Seção -->
+            <div class="text-center mb-12">
+                <h3 class="text-3xl font-bold text-crea-blue text-center mb-8">Conheça os outros projetos da inovação
+                </h3>
+            </div>
 
-      <!-- Grid de Cards de Projetos -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6">
-        <!-- Card Projeto 1 -->
-        <a href="coworkings.html"
-          class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
-          <img src="img/gerais/ferramentas-de-gestao-de-coworking-sem-texto.png" alt="Projeto 1"
-            class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-          <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
-          <h3 class="relative text-white text-xl font-bold">Coworkings</h3>
-        </a>
+            <!-- Grid de Cards de Projetos -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-6">
 
-        <!-- Card Projeto 2 -->
-        <a href="capacitacao.html"
-          class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
-          <img src="img/gerais/plataforma-de-capacitacao-sem-texto.png" alt="Projeto 2"
-            class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-          <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
-          <h3 class="relative text-white text-xl font-bold">
-            Plataforma de Capacitação
-          </h3>
-        </a>
+                <!-- Card Projeto 1 -->
+                <a href="coworkings.html"
+                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+                    <img src="img/gerais/ferramentas-de-gestao-de-coworking-sem-texto.png" alt="Projeto 1"
+                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+                    <h3 class="relative text-white text-xl font-bold">Coworkings</h3>
+                </a>
 
-        <!-- Card Projeto 3 -->
-        <a href="banco-de-talentos.html"
-          class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
-          <img src="img/gerais/banco-de-talentos-sem-texto.png" alt="Projeto 3"
-            class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110" />
-          <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
-          <h3 class="relative text-white text-xl font-bold">
-            Banco de Talentos
-          </h3>
-        </a>
-      </div>
-    </div>
-  </section>
+                <!-- Card Projeto 2 -->
+                <a href="capacitacao.html"
+                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+                    <img src="img/gerais/plataforma-de-capacitacao-sem-texto.png" alt="Projeto 2"
+                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+                    <h3 class="relative text-white text-xl font-bold">Plataforma de Capacitação</h3>
+                </a>
+
+                <!-- Card Projeto 3 -->
+                <a href="banco-de-talentos.html"
+                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+                    <img src="img/gerais/banco-de-talentos-sem-texto.png" alt="Projeto 3"
+                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+                    <h3 class="relative text-white text-xl font-bold">Banco de Talentos</h3>
+                </a>
+
+                <!-- Card Projeto 4 -->
+                <a href="clube-de-vantagens.html"
+                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+                    <img src="img/gerais/clube-de-vantagens.png" alt="Projeto 3"
+                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+                    <h3 class="relative text-white text-xl font-bold">Clube de Vantages</h3>
+                </a>
+
+
+            </div>
+        </div>
+    </section>
+
   <!-- Toast: espaço ainda não liberado -->
   <div id="toast-espaco-bloqueado" class="fixed inset-x-0 bottom-4 flex justify-center z-50 pointer-events-none hidden">
     <div id="toast-espaco-bloqueado-inner"
