--- a/o-crea-lab.html
+++ b/o-crea-lab.html
@@ -176,6 +176,7 @@
                     <li><a href="capacitacao.html" class="hover:text-purple-300 transition-colors duration-300">Capacitação</a></li>
                     <li><a href="banco-de-talentos.html" class="hover:text-purple-300 transition-colors duration-300">Banco de Talentos</a></li>
                     <li><a href="clube-de-vantagens.html" class="hover:text-purple-300 transition-colors duration-300">Clube de vantagens</a></li>
+                     <li><a href="beneficios.html" class="hover:text-purple-300 transition-colors duration-300">Benefícios</a></li>
                     <!-- <li><a href="#opcao5" class="hover:text-purple-300 transition-colors duration-300">Opção 5</a></li>
                     <li><a href="#opcao6" class="hover:text-purple-300 transition-colors duration-300">Opção 6</a></li>
                     <li><a href="#opcao7" class="hover:text-purple-300 transition-colors duration-300">Opção 7</a></li> -->
