--- a/clube-de-vantagens.html
+++ b/clube-de-vantagens.html
@@ -24,13 +24,12 @@
         }
 
         :root {
-        --theme-primary-bright: #2361D8;
+            --theme-primary-bright: #2361D8;
         }
 
         .text-crea-blue-bright {
             color: var(--theme-primary-bright);
         }
-
     </style>
 </head>
 
@@ -43,11 +42,7 @@
         <header class="w-full max-w-7xl mx-auto p-6 md:px-8 flex justify-between items-center">
             <!-- Logo Esquerdo -->
             <div class="text-2xl font-bold tracking-wider text-crea-blue">
-                 <a href="index.html"
-            ><img
-              src="img/componentes/logo-superior-crea-lab-mg.png"
-              width="100rem"
-          /></a>
+                <a href="index.html"><img src="img/componentes/logo-superior-crea-lab-mg.png" width="100rem" /></a>
             </div>
 
             <!-- Menu de Navegação (Desktop) -->
@@ -61,8 +56,11 @@
                             class="hover:text-purple-300 transition-colors duration-300">Capacitação</a></li>
                     <li><a href="banco-de-talentos.html"
                             class="hover:text-purple-300 transition-colors duration-300">Banco de Talentos</a></li>
-                     <li><a href="clube-de-vantagens.html"
+                    <li><a href="clube-de-vantagens.html"
                             class="hover:text-purple-300 transition-colors duration-300">Clube de vantagens</a></li>
+                    <li><a href="beneficios.html"
+                            class="hover:text-purple-300 transition-colors duration-300">Benefícios</a></li>
+
                     <!-- <li><a href="#opcao5" class="hover:text-purple-300 transition-colors duration-300">Opção 5</a></li>
                     <li><a href="#opcao6" class="hover:text-purple-300 transition-colors duration-300">Opção 6</a></li>
                     <li><a href="#opcao7" class="hover:text-purple-300 transition-colors duration-300">Opção 7</a></li> -->
@@ -108,8 +106,8 @@
 
                 <!-- Coluna da Imagem -->
                 <div class="md:w-2/5">
-                    <img src="img/gerais/clube-de-vantagens-elemento-lateral.png"
-                        alt="Ilustração de Exemplo" class="w-full h-auto object-cover">
+                    <img src="img/gerais/clube-de-vantagens-elemento-lateral.png" alt="Ilustração de Exemplo"
+                        class="w-full h-auto object-cover">
                 </div>
 
                 <!-- Coluna do Texto -->
@@ -119,17 +117,17 @@
                     </h2>
                     <p class="text-theme-primary-main leading-relaxed mb-2">
                         O Clube de Vantagens foi criado para oferecer aos profissionais registrados<strong
-                            class="text-crea-blue-bright">descontos especiais</strong>  nas principais lojas 
-                            do Brasil, em diversas categorias como tecnologia, educação, viagens, moda, entre outras.
+                            class="text-crea-blue-bright">descontos especiais</strong> nas principais lojas
+                        do Brasil, em diversas categorias como tecnologia, educação, viagens, moda, entre outras.
                     </p>
                     <p class="text-theme-primary-main leading-relaxed mb-2">
-                        Além de economizar nas suas compras, você ainda acumula cashback que pode ser utilizado para 
+                        Além de economizar nas suas compras, você ainda acumula cashback que pode ser utilizado para
                         <strong class="text-crea-blue-bright">abater valores de anuidade e taxas do CREA-SC.</strong>
                     </p>
                     <p class="text-theme-primary-main leading-relaxed mb-2">
                         Aproveite os benefícios e transforme suas compras em vantagens para a sua carreira!
                     </p>
-                   
+
                 </div>
 
 
@@ -283,8 +281,11 @@
         </div>
     </footer>
     <!-- Botão Voltar ao Topo -->
-    <a href="#home" id="to-top-button" class="fixed bottom-5 right-5 z-50 p-3 bg-indigo-100 rounded-full text-indigo-800 shadow-lg hover:bg-indigo-200 transition-all duration-300 hidden">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"></path></svg>
+    <a href="#home" id="to-top-button"
+        class="fixed bottom-5 right-5 z-50 p-3 bg-indigo-100 rounded-full text-indigo-800 shadow-lg hover:bg-indigo-200 transition-all duration-300 hidden">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"></path>
+        </svg>
     </a>
 
     <script>
@@ -313,16 +314,16 @@
             }
         });
 
-                 // --- Script para o botão Voltar ao Topo ---
-            const toTopButton = document.getElementById('to-top-button');
+        // --- Script para o botão Voltar ao Topo ---
+        const toTopButton = document.getElementById('to-top-button');
 
-            window.addEventListener('scroll', () => {
-                if (window.scrollY > 400) { // Mostra o botão após rolar 400px
-                    toTopButton.classList.remove('hidden');
-                } else {
-                    toTopButton.classList.add('hidden');
-                }
-            });
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 400) { // Mostra o botão após rolar 400px
+                toTopButton.classList.remove('hidden');
+            } else {
+                toTopButton.classList.add('hidden');
+            }
+        });
     </script>
 
 </body>
