--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                     <li><a href="capacitacao.html" class="hover:text-purple-300 transition-colors duration-300">Capacitação</a></li>
                     <li><a href="banco-de-talentos.html" class="hover:text-purple-300 transition-colors duration-300">Banco de Talentos</a></li>
                     <li><a href="clube-de-vantagens.html" class="hover:text-purple-300 transition-colors duration-300">Clube de vantagens</a></li>
+                     <li><a href="beneficios.html"
+                            class="hover:text-purple-300 transition-colors duration-300">Benefícios</a></li>
                 </ul>
             </nav>
             <button id="mobile-menu-button" class="md:hidden z-30">
